--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,412 @@
-.App {
-  text-align: center;
+.body {
+  margin: 0;
+  padding: 0;
+  height: auto;
+  width: 100%;
+  background-color: #73d631 !important;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.maincontainer {
+  height: 100vh;
+  width: 100%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navborder:hover{
+  border: 0.5px solid #173800;
+}
+.herosection {
+  height: 100vh;
+  width: 100%;
+  
+  background-color: black;
+  background-image: url(./Images/1.png) ;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
+.hero1 {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100vh;
+  font-family: 'Josefin Sans', sans-serif;
+  color: aliceblue;
+  width: auto;
+  align-items: center;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.hero1 h1{
+  font-size: 4rem;
+  font-family: 'Nova Square', cursive;
+  text-transform: uppercase;
+}
+
+.btnhero {
+  border: 1px solid #888888;
+  margin: 50px 10px 10px 10px;
+  font-size: 1.3rem !important;
+  background: none !important;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 0px;
+  transition: 0.8s;
+  position: relative;
+  overflow: hidden;
+}
+
+.aboutbutton {
+  
+  color: beige;
+}
+.projectbutton {
+color: thistle;
+background-color: #2E7101;
+
+}
+
+.projectbutton:hover {
+  color: white;
+  z-index: 2;
+}
+.aboutbutton:hover {
+  color: black;
+  z-index: 1;
+}
+
+.btn::before {
+  content: "";
+  position: absolute;
+  background: none;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background: #2E7101;
+  z-index: -1;
+  transition: 0.8s;
+}
+.aboutbutton::before{
+  top: 0;
+  border-radius: 0 0 50% 50%;
+}
+
+.projectbutton::before{
+  top: 0;
+  border-radius: 0 0 50% 50%;
+}
+
+.projectbutton::before{
+  height: 180%;
+}
+
+.aboutbutton:hover::before{
+  height: 180%;
+}
+.projectbutton:hover::before{
+  height: 0%;
+}
+
+.teams{
+  background-color: rgb(35, 41, 34);
   min-height: 100vh;
+  padding-bottom: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.teamsHeadingSection{
+  width: 100%;
+  height: 40vh;
+  background-image: url(./Images/GameDev.png);
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.teamsHeadingSection h1{
+  font-size: 5rem;
+  font-style: italic;
+  text-shadow: 2px 4px 10px black;
+}
+.teamsMainSection{
+  width: 80%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.teamsdiv {
+  padding: 30px;
+  margin-top: -50px;
+  margin-bottom: 10px;
+  background-color: black;
+  width: 100%;
+  border-radius: 20px 0 20px 0;
+}
+.teamsdiv:hover{
+  border: 1px solid chartreuse;
+  box-shadow: 2px 1px 10px #888888;box-shadow: 2px 1px 10px #888888;
+}
+.teamName{
+  font-family: 'Orbitron', sans-serif;
+}
+
+.detailContainer{
+  width: 100%;
+  height: 100vh;
+  padding: 50px;
+  display: flex;
+  background-color: rgba(0, 0, 0);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.detailCard{
+  width: 80%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  box-shadow: 0px 4px 10px green;
+}
+.detailNo{
+  background-color:rgb(63, 172, 20);
+  width: 60px;
+  height: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: -20px;
+  box-shadow: 0px 2px 5px rgb(0, 0, 0);
+  font-size: 2.5rem;
+  border-radius: 50%;
+  border: 1px solid white;
+}
+.detailCard h1{
+  font-family: 'Orbitron', sans-serif;
+  font-size: 4rem;
+  background: none;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(87, 250, 23);
+  text-transform: uppercase;
+}
+.border{
+  width: 80%;
+  border-top: thin solid rgba(255, 255, 255, 0.295);
+}
+.detailInfo{
+  padding: 30px 30px 0px 30px;
+  color: rgb(173, 169, 169);
+}
+
+.detailRow{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+  width: 80%;
+  padding: 20px;
+  margin-bottom: 20px;
+}
+.detailSubCard{
+  background: none;
+  font-family: cursive;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: thin solid rgb(85, 145, 255);
+  color: rgba(165, 165, 165, 0.767);
+  padding: 10px;
+}
+.detailSubCard:hover{
+  box-shadow: 1px 2px 5px rgb(68, 126, 68);
+}
+.backbutton{
+  margin-top: 30px;
+  background: none !important;
+  background-color: #2E7101 !important;
+}
+.assignmentContainer{
+  background-color: rgb(36, 56, 28);
+  height: 100%;
+  width: 100%;
+  padding: 40px 10px 10px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.assignHeading{
+  color: wheat;
+  width: 90%;
+  font-family: 'Orbitron', sans-serif;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.uploadContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px;
+  width: 100vw;
+  height: 100vh;
+}
+.uploadDiv{
+  width: 100vw;
+}
+.uploadShowSection{
+  width: 80%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+}
+.uploadGridImg{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  width: 100%;
+}
+.uploadImg{
+  height: 250px;
+  width: 500px;
+  overflow: scroll;
+  position: relative;
+  background-position: center;
+}
+.uploadBtns{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.uploadBtn{
+  background: none !important;
+  border: thin solid black; 
+  
+}
+.edit{
+  background-color: rgb(35, 130, 255) !important;
+}
+.delete{
+  background-color:  rgb(255, 50, 23) !important;
+}
+.progress-bar{
+  height: 5px;
+  background: rgb(238, 130, 139);
+  margin-top: 20px;
+}
+.photo-grid{
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; 
+  width: 100%;
+  height: auto;
+  grid-gap: 40px;
+}
+.img-wrap{
+  overflow: hidden;
+  height: 0;
+  padding: 50% 0;
+  position: relative;
+  opacity: 0.8;
+}
+.img-wrap img{
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 150%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.modal-div{
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100%;
+  height: 100%;
+}
+.modal-img{
+  display: block;
+  max-width: 60%;
+  max-height: 80%;
+  margin: 60px auto;
+  box-shadow: 3px 5px 7px rgba(0, 0, 0, 0.5);
+  border: 3px solid white;
+}
+
+@media screen and (max-width: 750px) {
+  .docontainer{
+    font-size: 20px;
+    padding: 40px 20px 20px 30px;
   }
-  to {
-    transform: rotate(360deg);
+  .dorow{
+    display: flex;
+    flex-direction: column;
+    margin-top: 0px;
+    padding: 10px 10px 10px 10px;
+  }
+  .docol{
+    padding: 10px 0px 0px 10px;
+  }
+  .herosection {
+
+    height: 35vh;
+    background-color: black;
+    display: flex;
+  }
+  .hero1 h1{
+    font-size: 24px;
+  }
+  .hero1 h2{
+    font-size: 20px;
+  }
+  .hero1 p{
+    font-size: 17px;
+  }
+  .btnhero{
+    height: 30px;
+    width: 100px;
+    padding: 5px 5px 5px 5px;
+    font-size: 14px;
+  }
+  .messagecontainer{
+    height: 10vh;
+  }
+  .messagecontainer h4{
+    font-size: 15px;
+  }
+  .messagecontainer h6{
+    font-size: 13px;
+  }
+
+  .blogcontainer{
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .projectdetaildiv{
+    width: 97%;
+    padding: 50px 30px 30px 20px;
+  }
+  .projectdetaildiv h1{
+    font-size: 25px;
+    color: teal;
+  }
+  .projectdetaildiv h5{
+    font-size: 18px;
+  }
+  .projectdetaildiv p{
+    font-size: 14px;
   }
 }
